<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.0"/>
    <CheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住我"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="12dp" android:layout_marginStart="168dp"/>
    <Button
            android:id="@+id/loginbtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/loginbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="88dp" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:id="@+id/registerbtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/registerbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginbtn"
            android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.497"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/teal_200"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="176dp"
            android:layout_height="142dp"
            app:srcCompat="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="54dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
