<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:background="@drawable/back">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout
                android:id="@+id/layout_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/purple_500"
                android:paddingBottom="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/picture1"
                    app:shapeAppearanceOverlay="@style/circleImageStyle"/>

            <TextView
                    android:id="@+id/tv_name"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
    <EditText
            android:id="@+id/edit_add_title"
            android:hint="@string/addtitle"
            android:minLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="417dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
    >
        <EditText
                android:id="@+id/edit_add_desc"
                android:hint="@string/addcontent"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:background="@null"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">
        <Button
                android:id="@+id/add_diary_confirm"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            app:menu="@menu/bottom_nav_menu"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:itemIconTint="@android:color/transparent"
            app:itemTextColor="@color/midnightblue"
            android:background="?android:attr/windowBackground">


    </com.google.android.material.bottomnavigation.BottomNavigationView>


</LinearLayout>


