<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:background="#F3F3F3">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/layout_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#DF2626"
                    android:paddingBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/me"
                        app:shapeAppearanceOverlay="@style/circleImageStyle"/>

                <TextView
                        android:id="@+id/tv_name"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="34dp"
                    android:text="@string/password_hide_text"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:drawablePadding="10dp"
                    app:drawableEndCompat="@drawable/eye_off"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/tv_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp">

                <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="注销"
                        android:layout_marginTop="10dp"/>

                <Button
                        android:id="@+id/btn_system_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="系统介绍"
                        android:layout_marginTop="10dp"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="最近点赞"
                android:textSize="24sp"
                android:textStyle="bold"/>
        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHeritageItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_heritage" />
    </LinearLayout>

</ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav_menu"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:itemIconTint="@android:color/transparent"
            app:itemTextColor="@color/midnightblue"
            android:background="?android:attr/windowBackground"/>
</RelativeLayout>
